Added the events alert feature with forms, now going to change it to work with users current location

--- a/public/style.css
+++ b/public/style.css
@@ -67,6 +67,12 @@ a {
   }
 }
 
+/* ///////////////// Alert ////////////////// */
+
+.alert {
+  max-width: 20rem;
+}
+
 /* /////////////// PicDay ///////////////// */
 
 .pic-day-container {
